@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.13
+Release: 0.14
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -577,6 +577,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Tue Apr  4 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.14
+- add macros to parameterize rpmds probe dependency defaults.
+
 * Sun Apr  2 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.13
 - eliminate SOURCEPACKAGE tag, use non-existence of SOURCERPM instead.
 
